publications finish html document

--- a/src/publications.html
+++ b/src/publications.html
@@ -111,7 +111,7 @@
             <div class="news-wrapper container">
                 <ul class="news__list">
                     <li class="news__item">
-                        <a href="/" class="news__article-link">
+                        <a href="publications-entry.html" class="news__article-link">
                             <article class="news__article">
                                 <h3 class="news__item-heading">
                                     Валютний контроль помер, хай живе валютний контроль!
@@ -130,7 +130,7 @@
                         </a>
                     </li>
                     <li class="news__item">
-                        <a href="/" class="news__article-link">
+                        <a href="publications-entry.html" class="news__article-link">
                             <article class="news__article">
                                 <img src="images/publications/mail.jpg" alt="melenial" class="news__image">
                                 <h3 class="news__item-heading">
@@ -151,7 +151,7 @@
                         </a>
                     </li>
                     <li class="news__item">
-                        <a href="/" class="news__article-link">
+                        <a href="publications-entry.html" class="news__article-link">
                             <article class="news__article">
                                 <h3 class="news__item-heading">
                                     Валютний контроль помер, хай живе валютний контроль!
@@ -170,7 +170,7 @@
                         </a>
                     </li>
                     <li class="news__item">
-                        <a href="/" class="news__article-link">
+                        <a href="publications-entry.html" class="news__article-link">
                             <article class="news__article">
                                 <img src="images/publications/mail.jpg" alt="melenial" class="news__image">
                                 <h3 class="news__item-heading">
@@ -193,7 +193,7 @@
                 </ul>
                 <ul class="news__list">
                     <li class="news__item">
-                        <a href="/" class="news__article-link">
+                        <a href="publications-entry.html" class="news__article-link">
                             <article class="news__article">
                                 <img src="images/publications/wtf.jpg" alt="equity-associate" class="news__image">
                                 <h3 class="news__item-heading">
@@ -215,7 +215,7 @@
                         </a>
                     </li>
                     <li class="news__item">
-                        <a href="/" class="news__article-link">
+                        <a href="publications-entry.html" class="news__article-link">
                             <article class="news__article">
                                 <img src="images/publications/law-language.jpg" alt="equity-associate"
                                     class="news__image">
@@ -238,7 +238,7 @@
                         </a>
                     </li>
                     <li class="news__item">
-                        <a href="/" class="news__article-link">
+                        <a href="publications-entry.html" class="news__article-link">
                             <article class="news__article">
                                 <img src="images/publications/wtf.jpg" alt="equity-associate" class="news__image">
                                 <h3 class="news__item-heading">
@@ -260,7 +260,7 @@
                         </a>
                     </li>
                     <li class="news__item">
-                        <a href="/" class="news__article-link">
+                        <a href="publications-entry.html" class="news__article-link">
                             <article class="news__article">
                                 <img src="images/publications/law-language.jpg" alt="equity-associate"
                                     class="news__image">
@@ -285,7 +285,7 @@
                 </ul>
                 <ul class="news__list">
                     <li class="news__item">
-                        <a href="/" class="news__article-link">
+                        <a href="publications-entry.html" class="news__article-link">
                             <article class="news__article">
                                 <img src="images/publications/fine.jpg" alt="equity-associate" class="news__image">
                                 <h3 class="news__item-heading">
@@ -307,7 +307,7 @@
                         </a>
                     </li>
                     <li class="news__item">
-                        <a href="/" class="news__article-link">
+                        <a href="publications-entry.html" class="news__article-link">
                             <article class="news__article">
                                 <img src="images/publications/training.jpg" alt="music-children" class="news__image">
                                 <h3 class="news__item-heading">
@@ -329,7 +329,7 @@
                         </a>
                     </li>
                     <li class="news__item">
-                        <a href="/" class="news__article-link">
+                        <a href="publications-entry.html" class="news__article-link">
                             <article class="news__article">
                                 <img src="images/publications/fine.jpg" alt="equity-associate" class="news__image">
                                 <h3 class="news__item-heading">
@@ -351,7 +351,7 @@
                         </a>
                     </li>
                     <li class="news__item">
-                        <a href="/" class="news__article-link">
+                        <a href="publications-entry.html" class="news__article-link">
                             <article class="news__article">
                                 <img src="images/publications/training.jpg" alt="music-children" class="news__image">
                                 <h3 class="news__item-heading">
