--- a/src/publications-entry.html
+++ b/src/publications-entry.html
@@ -134,7 +134,7 @@
                     <h2 class="publications-entry__heading-danger">
                         До уваги українських силовиків: перевірка проводилася онлайн, без обшуків, без вилучення
                         серверів чи іншого видимого для
-                        бі
+                        бізнесу втручання. І так можна було.
                     </h2>
                     <h3 class="publications-entry__heading-secondary">
                         За результатами перевірок СNIL виявили порушення двох вимог GDPR:
