--- a/src/services.html
+++ b/src/services.html
@@ -145,7 +145,7 @@
                                     </a>
                                 </li>
                                 <li class="our-services__item">
-                                    <a href="#" aria-label="Search doctor" class="our-services__link">
+                                    <a href="services-page.html" aria-label="Search doctor" class="our-services__link">
                                         <img src="images/our-services/case.svg" alt="Search doctor"
                                             class="our-services__image" />
                                         <h3 class="our-services__heading">Комплексний щоденний
@@ -162,7 +162,7 @@
                                     </a>
                                 </li>
                                 <li class="our-services__item">
-                                    <a href="#" aria-label="Search doctor" class="our-services__link">
+                                    <a href="services-page.html" aria-label="Search doctor" class="our-services__link">
                                         <img src="images/our-services/structure.svg" alt="Search doctor"
                                             class="our-services__image" />
                                         <h3 class="our-services__heading">Структуризація
@@ -178,7 +178,7 @@
                                     </a>
                                 </li>
                                 <li class="our-services__item">
-                                    <a href="#" aria-label="Search doctor" class="our-services__link">
+                                    <a href="services-page.html" aria-label="Search doctor" class="our-services__link">
                                         <img src="images/our-services/contract.svg" alt="Search doctor"
                                             class="our-services__image" />
                                         <h3 class="our-services__heading">Побудовa договірних
@@ -198,7 +198,7 @@
                                     </a>
                                 </li>
                                 <li class="our-services__item">
-                                    <a href="#" aria-label="Search doctor" class="our-services__link">
+                                    <a href="services-page.html" aria-label="Search doctor" class="our-services__link">
                                         <img src="images/our-services/protaction.svg" alt="Search doctor"
                                             class="our-services__image" />
                                         <h3 class="our-services__heading">Захист бізнесу,
@@ -218,7 +218,7 @@
                                     </a>
                                 </li>
                                 <li class="our-services__item">
-                                    <a href="#" aria-label="Search doctor" class="our-services__link">
+                                    <a href="services-page.html" aria-label="Search doctor" class="our-services__link">
                                         <img src="images/our-services/court.svg" alt="Search doctor"
                                             class="our-services__image" />
                                         <h3 class="our-services__heading">Судове представництво
