--- a/src/team.html
+++ b/src/team.html
@@ -127,7 +127,7 @@
                             Equity partner, Attorney-at-law
                         </p>
                     </div>
-                    <a href="#" class="all-team__link">
+                    <a href="team-member.html" class="all-team__link">
                     </a>
                 </li>
                 <li class="all-team__item">
@@ -140,7 +140,7 @@
                             Associate
                         </p>
                     </div>
-                    <a href="#" class="all-team__link">
+                    <a href="team-member.html" class="all-team__link">
                     </a>
                 </li>
                 <li class="all-team__item">
@@ -148,13 +148,13 @@
                         alt="Владислав Мельник">
                     <div class="all-team__description">
                         <p class="all-team__name">
-                            Владислав Мельник Брат-2
+                            Владислав Мельник
                         </p>
                         <p class="all-team__position">
                             Associate
                         </p>
                     </div>
-                    <a href="#" class="all-team__link">
+                    <a href="team-member.html" class="all-team__link">
                     </a>
                 </li>
                 <li class="all-team__item">
@@ -167,7 +167,7 @@
                             Equity partner, Attorney-at-law
                         </p>
                     </div>
-                    <a href="#" class="all-team__link">
+                    <a href="team-member.html" class="all-team__link">
                     </a>
                 </li>
                 <li class="all-team__item">
@@ -180,7 +180,7 @@
                             Associate, Attorney-at-law
                         </p>
                     </div>
-                    <a href="#" class="all-team__link">
+                    <a href="team-member.html" class="all-team__link">
                     </a>
                 </li>
             </ul>
